unpackaged/main/default/objects/Reassign_Helper__c/Reassign_Helper__c.object-meta.xml
<CustomObject>
    <label>Mass Reassign Opportunity Helper</label>
    <nameField>
        <label>Nom de Mass Reassign Opportunities Helpe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mass Reassign Opportunities Helper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>