unpackaged/main/default/objects/Reassign_Helper__c/fields/Assign_to__c.field-meta.xml
<CustomField>
    <fullName>Assign_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mass_Reassign_Opportunities_Helper1</relationshipName>
    <type>Lookup</type>
</CustomField>