unpackaged/main/default/objects/Reassign_Helper__c/fields/ClosedDate_From__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate_From__c</fullName>
    <label>From</label>
    <type>Date</type>
</CustomField>