unpackaged/main/default/objects/Reassign_Helper__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <type>Date</type>
</CustomField>